[gd_scene load_steps=6 format=2]

[ext_resource path="res://mianFunction/allCatInfo/popup_add_cat.gd" type="Script" id=1]
[ext_resource path="res://MiSans/MiSans-Normal.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 2 )

[node name="popup_add_cat" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.298039, 0.298039, 0.298039, 1 )

[node name="InfoField" type="VBoxContainer" parent="."]
anchor_right = 0.998
margin_right = 0.0479736
margin_bottom = 600.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="cat_name" type="HBoxContainer" parent="InfoField"]
margin_right = 1022.0
margin_bottom = 51.0
size_flags_horizontal = 7

[node name="Label" type="Label" parent="InfoField/cat_name"]
margin_right = 509.0
margin_bottom = 51.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "名字"
align = 1
valign = 1

[node name="Label2" type="LineEdit" parent="InfoField/cat_name"]
margin_left = 513.0
margin_right = 1022.0
margin_bottom = 51.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
placeholder_text = "请输入猫咪名称"
caret_blink = true
caret_blink_speed = 0.5

[node name="cat_sex" type="HBoxContainer" parent="InfoField"]
margin_top = 55.0
margin_right = 1022.0
margin_bottom = 102.0
size_flags_horizontal = 7

[node name="Label" type="Label" parent="InfoField/cat_sex"]
margin_right = 509.0
margin_bottom = 47.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "性别"
align = 1
valign = 1

[node name="Label2" type="OptionButton" parent="InfoField/cat_sex"]
margin_left = 513.0
margin_right = 1022.0
margin_bottom = 47.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "男"
align = 1
items = [ "男", null, false, 0, null, "女", null, false, 1, null ]
selected = 0

[node name="cat_kind" type="HBoxContainer" parent="InfoField"]
margin_top = 106.0
margin_right = 1022.0
margin_bottom = 153.0
size_flags_horizontal = 7

[node name="Label" type="Label" parent="InfoField/cat_kind"]
margin_right = 509.0
margin_bottom = 47.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "种类"
align = 1
valign = 1

[node name="Label2" type="OptionButton" parent="InfoField/cat_kind"]
margin_left = 513.0
margin_right = 1022.0
margin_bottom = 47.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "请选择种类"
align = 1

[node name="cat_color" type="HBoxContainer" parent="InfoField"]
margin_top = 157.0
margin_right = 1022.0
margin_bottom = 208.0
size_flags_horizontal = 7

[node name="Label" type="Label" parent="InfoField/cat_color"]
margin_right = 509.0
margin_bottom = 51.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "颜色"
align = 1
valign = 1

[node name="Label2" type="LineEdit" parent="InfoField/cat_color"]
margin_left = 513.0
margin_right = 1022.0
margin_bottom = 51.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
placeholder_text = "请输入猫咪颜色"
caret_blink = true
caret_blink_speed = 0.5

[node name="cat_description" type="HBoxContainer" parent="InfoField"]
margin_top = 212.0
margin_right = 1022.0
margin_bottom = 600.0
size_flags_horizontal = 7
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5

[node name="Label" type="Label" parent="InfoField/cat_description"]
margin_right = 509.0
margin_bottom = 388.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "补充信息"
align = 1

[node name="Label2" type="ScrollContainer" parent="InfoField/cat_description"]
margin_left = 513.0
margin_right = 1022.0
margin_bottom = 388.0
size_flags_horizontal = 7
follow_focus = true
scroll_horizontal_enabled = false

[node name="TextEdit" type="TextEdit" parent="InfoField/cat_description/Label2"]
margin_right = 509.0
margin_bottom = 388.0
size_flags_horizontal = 7
size_flags_vertical = 3
draw_spaces = true
wrap_enabled = true

[node name="Popup" type="AcceptDialog" parent="."]
margin_right = 40.0
margin_bottom = 40.0
popup_exclusive = true
window_title = "警告！"

[node name="Button" type="Button" parent="."]
margin_right = 140.0
margin_bottom = 60.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "确认"

[connection signal="resized" from="." to="." method="_on_Control_resized"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
